yuma123 (2.12) UNRELEASED; urgency=medium

  * Added val123_add_virtual_cb to support multiple calbacks "filling" common
    virtual container.
  * Fixed anyxml support for config=true data
  * Improved /system-state/clock/current-datetime resolution to nanoseconds and
    disabled value caching

 -- Vladimir Vassilev <vladimir@transpacket.com>  Wed, 07 Nov 2018 21:52:48 +0100

yuma123 (2.11) stable; urgency=medium

  * Improved stability and interoperability
  * Added more validation testcases
  * Preliminary NMDA support rfc8342
  * RPM build scripts (from ekinzie)
  * yangcli
    - Added --use-agent parm for use of ssh-agent authentication (from ekinzie)
  * yangdump
    - YANG tree format support rfc8340

 -- Vladimir Vassilev <vladimir@transpacket.com>  Fri, 17 Aug 2018 03:02:54 +0200

yuma123 (2.10) stable; urgency=medium

  * ncx
    - YANG 1.1 Xpath functions implementation.
    - Fixed bug in handling of deviations.
    - Fixed bug in apply_commit_deletes.
    - Fixed bug in val_make_serialized_string.
    - Refactored the base64 implementation. Fixed bugs and inconsistencies.
    - Added support for multiple obj callback registrations.
    - Fixed CDATA handling.
    - Splitted yuma-netconf.yang to yuma123-netconf.yang and yuma123-netconf-types.yang
    - Various ietf draft models updated. Erratas applied.
    - Removed circular libyumancx dependencies on libyumamgr
  * agt
    - Implementation of ietf-yang-library
    - Replaced proprietary notifications with the ietf-netconf-notifications.yang defined.
    - Moved agt_arp.c integrated module as standalone example-modules/yuma-arp
  * test
    - Added netconfd testsuite netconf/test/netconfd.
    - Added litenc client side session scripting python module.
  * yangcli
    - Implemented ietf-yang-library client side support.
    - Fixed bug caused by attempted reload of already loaded module.
    - Added yes/no container fill check promp.
