@@ -5,8 +5,9 @@ yuma123 (2.12) UNRELEASED; urgency=medium
   * Fixed anyxml support for config=true data
   * Improved /system-state/clock/current-datetime resolution to nanoseconds and
     disabled value caching
+  * Added yuma123-system:disable-cache RPC
 
- -- Vladimir Vassilev <vladimir@transpacket.com>  Wed, 07 Nov 2018 21:52:48 +0100
+ -- Vladimir Vassilev <vladimir@transpacket.com>  Thu, 08 Nov 2018 09:47:50 +0100
 
 yuma123 (2.11) stable; urgency=medium
 
